@@ -1,5 +1,5 @@
 #ifndef _PyMOL_VERSION
-#define _PyMOL_VERSION "0.88pre6"
+#define _PyMOL_VERSION "0.88pre7"
 #endif
 
 #ifndef _PyMOL_VERSION_int 
